--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,3 +11,15 @@ header {
 .section-container {
   @apply max-w-screen-2xl container mx-auto lg:px-24 px-4;
 }
+
+.title {
+  @apply text-4xl md:text-5xl font-bold my-2 md:leading-snug;
+}
+
+.subtitle {
+  @apply text-red uppercase tracking-wide font-medium text-lg;
+}
+
+.heartStar {
+  border-radius: 0 28px 0 28px;
+}
