--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,3 +23,9 @@ header {
 .heartStar {
   border-radius: 0 28px 0 28px;
 }
+
+.active {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  color: #39DB4A;
+}
